[CRRE-134] Fix search bar align

--- a/src/main/resources/public/sass/global/_crre-specifics.scss
+++ b/src/main/resources/public/sass/global/_crre-specifics.scss
@@ -1148,6 +1148,10 @@ body.crre {
     margin-top: 8px;
   }
 
+  .margin-top-6 {
+    margin-top: 6px;
+  }
+
   .margin-bottom-20 {
     margin-bottom: 20px;
   }
